--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Laundry"
         tools:targetApi="31">
         <activity
+            android:name=".LayananPelanggan"
+            android:exported="false" />
+        <activity
             android:name=".Card_Data_Pelanggan"
             android:exported="false" />
         <activity
