--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +13,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Laundry"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".Pilih_Pelanggan"
+            android:exported="false" />
+        <activity
+            android:name=".activity_pilih_layanan"
+            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".activity_pilih_pelanggan"-->
+<!--            android:exported="false" />-->
+        <activity
+            android:name="transaksi.transaksi"
+            android:exported="false" />
+        <activity
+            android:name=".login"
+            android:exported="false" />
         <activity
             android:name=".Tambah_Layanan"
             android:exported="false" />
@@ -25,20 +40,19 @@
             android:exported="false" />
         <activity
             android:name=".Data_Pegawai"
-            android:exported="false" />
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".LayananPelanggan" -->
+        <!-- android:exported="false" /> -->
         <activity
-            android:name=".LayananPelanggan"
-            android:exported="false" />
+        android:name=".pelanggan.TambahPelanggan"
+        android:exported="false" />
 
-        <activity
-            android:name=".pelanggan.TambahPelanggan"
-            android:exported="false" />
         <activity
             android:name=".data_pelanggan"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
