--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -13,22 +14,63 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Laundry"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".Account"
+            android:exported="false" />
+        <activity
+            android:name=".Sign_Up"
+            android:exported="false" />
+        <activity
+            android:name=".activity_data_laporan"
+            android:exported="false" />
+        <activity
+            android:name=".data_cabang"
+            android:exported="false" />
+        <activity
+            android:name=".tambah_cabang"
+            android:exported="false" />
+        <activity
+            android:name=".struk_pembayaran"
+            android:exported="false" />
+        <activity
+            android:name=".konfirmasi"
+            android:exported="false" />
+        <activity
+            android:name=".tambah_tambahkan"
+            android:exported="false" />
+        <activity
+            android:name=".data_tambahkan"
+            android:exported="false" />
+        <activity
+            android:name=".pilih_tambahan"
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".card_pilih_tambahan" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".Pilih_Pelanggan"
             android:exported="false" />
         <activity
             android:name=".activity_pilih_layanan"
-            android:exported="false" />
-<!--        <activity-->
-<!--            android:name=".activity_pilih_pelanggan"-->
-<!--            android:exported="false" />-->
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".activity_pilih_pelanggan" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name="transaksi.transaksi"
             android:exported="false" />
         <activity
             android:name=".login"
-            android:exported="false" />
+            android:exported="true">
+
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+
+        </activity>
+
+
+
         <activity
             android:name=".Tambah_Layanan"
             android:exported="false" />
@@ -44,20 +86,14 @@
         <!-- android:name=".LayananPelanggan" -->
         <!-- android:exported="false" /> -->
         <activity
-        android:name=".pelanggan.TambahPelanggan"
-        android:exported="false" />
-
+            android:name=".pelanggan.TambahPelanggan"
+            android:exported="false" />
         <activity
             android:name=".data_pelanggan"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
         </activity>
     </application>
 
