--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,13 @@
         android:theme="@style/Theme.Laundry"
         tools:targetApi="31">
         <activity
+            android:name=".change_password"
+            android:exported="false" />
+        <activity
             android:name=".Account"
+            android:exported="false" />
+        <activity
+            android:name=".edit_profile"
             android:exported="false" />
         <activity
             android:name=".Sign_Up"
@@ -61,16 +67,11 @@
         <activity
             android:name=".login"
             android:exported="true">
-
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-
-
-
         <activity
             android:name=".Tambah_Layanan"
             android:exported="false" />
@@ -93,8 +94,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
